# castle-vault

./: .gitignore  .prettierrc  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: program.yml  rust-checks.yml  soteria.yml  yarn-lint.yml  yarn-publish.yml
programs/castle-lending-aggregator/: Cargo.toml
programs/castle-lending-aggregator/src/: backend_container.rs  errors.rs  events.rs  lib.rs  math.rs  state.rs
programs/castle-lending-aggregator/src/adapters/: jet.rs  port.rs  solend.rs
programs/castle-lending-aggregator/src/backend_container/: allocation.rs  iter.rs  mod.rs  rate.rs  reserves.rs
programs/castle-lending-aggregator/src/cpi/: mod.rs  solend.rs  solend_cpi.rs  spl.rs
programs/castle-lending-aggregator/src/instructions/: deposit.rs  init.rs  jet.rs  mod.rs  port.rs  rebalance.rs  reconcile.rs  reconcile_jet.rs  reconcile_port.rs  reconcile_solend.rs  refresh.rs  solend.rs  update_cap.rs  update_deposit_cap.rs  update_fees.rs  withdraw.rs
programs/castle-lending-aggregator/src/rebalance/: assets.rs  mod.rs  strategies.rs
programs/castle-vault/: Cargo.toml  expanded.rs
programs/castle-vault/src/: backend_container.rs  errors.rs  iter.rs  lib.rs  math.rs  reserves.rs  state.rs
programs/castle-vault/src/adapters/: jet.rs  mango.rs  mod.rs  port.rs  solend.rs
programs/castle-vault/src/asset_container/: iter.rs  mod.rs  rate.rs  reserves.rs  u64.rs
programs/castle-vault/src/backend_container/: allocation.rs  iter.rs  mod.rs  rate.rs  reserves.rs  u64.rs
programs/castle-vault/src/instructions/: claim_port_reward.rs  consolidate_refresh.rs  deposit.rs  init.rs  init_dex_orca_legacy.rs  init_dex_orca_legacy_market.rs  init_dex_states.rs  init_mango_additional_state.rs  init_port_additional_state.rs  init_port_reward_accounts.rs  init_reward_account.rs  init_vault.rs  init_yield_source.rs  mod.rs  rebalance.rs  reconcile.rs  refresh.rs  sell_port_reward.rs  sync_lp_token_supply.rs  update_config.rs  update_deposit_cap.rs  update_fees.rs  update_flags.rs  update_halt_flags.rs  update_yield_source_flags.rs  withdraw.rs
programs/castle-vault/src/rebalance/: assets.rs  mod.rs  strategies.rs
programs/nazare/: Cargo.toml
programs/nazare/src/: lib.rs
scripts/: create_vault.ts  emergency_brake.ts  emergency_brake_new.ts  halt.ts  launch_test_validator.sh  new-program-id.json  port_test_wallet.json  port_test_wallet.txt  test_create.ts  test_deposit.ts  test_legacy_vault.ts  test_orca.ts  test_port.ts  test_script1.ts  test_vault.ts  update_vault.ts  yarn_cleanup.sh
scripts/utils/ledger/: index.ts  utils.ts
sdk/: .gitignore  .prettierrc  README.md  package.json  tsconfig.json
sdk/src/: castle_lending_aggregator.ts  client.ts  config.ts  idl.ts  index.ts  types.ts  utils.ts
sdk/src/adapters/: asset.ts  index.ts  jet.ts  mango.ts  port.ts  solend.ts  utils.ts
sdk/src/adapters/ledger/: ledger_wallet.ts  utils.ts
sdk/src/dex/: index.ts  orca_legacy.ts
sdk/test/: client.test.ts
tests/: castle-lending-aggregator.js  castle-lending-aggregator.ts  castle-vault.ts  nazare.js  port_stake_rewart_test.ts  test_fixture.ts
tests/fixtures/: 3Mnn2fX6rQyUsyELYms1sBJyChWofzSNRoqYzvgMVz5E.json  GvDMxPzN1sCj7L26YDK2HnMRXEQmQ2aemov8YBtPS7vR.json  J83w4HKfqxwcq3BEMMkPFSppX3gqekLyLJBexebFVkix.json  spl-lending.json
tests/helpers/: jet.ts  port.ts  solend.ts
tests/test_cases/: equal_alloc_deposit_withdraw.ts  equal_alloc_fee_collection.ts  equal_alloc_rebalance.ts  equal_alloc_vault_cap_and_flags.ts  max_yield_calculator.ts  max_yield_proof_checker.ts  missing_1_pool_rebalance_equal_alloc.ts  missing_1_pool_rebalance_max_yield.ts  missing_2_pools_rebalance_equal_alloc.ts  port_stake_rewart_with_subreward.ts  port_stake_rewart_without_subreward.ts  refresh_check.ts
