[package]
description = "Created with Anchor"
edition = "2018"
name = "castle-lending-aggregator"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "castle_lending_aggregator"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
port-anchor-adaptor = "0.2.8"
port-variable-rate-lending-instructions = "0.2.9"
spl-math = {version = "0.1", features = ["no-entrypoint"]}
spl-token-lending = {git = "https://github.com/castle-finance/solana-program-library", version = "0.1.0", features = ["no-entrypoint"]}
