[package]
description = "Created with Anchor"
edition = "2018"
name = "castle-lending-aggregator"
version = "1.4.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "castle_lending_aggregator"

[features]
cpi = ["no-entrypoint"]
debug = ["anchor-lang/anchor-debug"]
default = ["debug"]
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
boolinator = "2.4.0"
jet = {git = "https://github.com/jet-lab/jet-v1/", version = "0.2.0", features = ["no-entrypoint", "cpi"]}
jet-proto-math = "1.0.1"
port-anchor-adaptor = {git = "https://github.com/castle-finance/port-anchor-adaptor.git", version = "0.2.9"}
port-variable-rate-lending-instructions = "0.2.9"
solana-maths = "0.1.1"
spl-math = {version = "0.1", features = ["no-entrypoint"]}
spl-token-lending = {git = "https://github.com/castle-finance/solana-program-library", version = "0.1.0", features = ["no-entrypoint"]}
strum = "0.24.0"
strum_macros = "0.24.0"
