[package]
authors = ["Castle Labs, Inc."]
description = "Castle Vault program"
edition = "2018"
homepage = "https://castle.finance"
license = "GPL-3.0-or-later"
name = "castle-vault"
repository = "https://github.com/castle-finance/castle-vault/"
version = "3.2.0"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false
name = "castle_vault"

[features]
debug = ["anchor-lang/anchor-debug"]
default = ["debug", "devnet-staging"]

devnet-parity = ["devnet-partner-addrs"]
devnet-staging = ["devnet-castle-addr", "devnet-partner-addrs"]

devnet-castle-addr = []
devnet-partner-addrs = ["port-anchor-adaptor/devnet", "spl-token-lending/devnet"]

fees = []

cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
bitflags = "1.3"
boolinator = "2.4.0"
itertools = "0.10"
jet = {git = "https://github.com/jet-lab/jet-v1/", version = "0.2.0", features = ["no-entrypoint", "cpi"]}
jet-proto-math = "1.0.1"
jet-proto-proc-macros = "1.0.3"
port-anchor-adaptor = {git = "https://github.com/castle-finance/port-anchor-adaptor.git", version = "0.3.5"}
port-variable-rate-lending-instructions = "0.2.9"
solana-maths = "0.1.1"
solana-security-txt = "1.0.1"
spl-math = {version = "0.1", features = ["no-entrypoint"]}
spl-token-lending = {git = "https://github.com/castle-finance/solana-program-library", version = "0.1.1", features = ["no-entrypoint"]}
static_assertions = "1.1.0"
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
mockall = "0.11"
type-layout = "0.2"
